--- a/.github/actions/image-retag/action.yml
+++ b/.github/actions/image-retag/action.yml
@@ -12,8 +12,11 @@ runs:
   using: composite
   steps:
     - name: Pull docker images
+      shell: bash
       run: docker pull ${{ inputs.image_source }}
     - name: Tag docker images
+      shell: bash
       run: docker tag ${{ inputs.image_source }} ${{ inputs.image_target }}
     - name: Push docker images
+      shell: bash
       run: docker push ${{ inputs.image_target }}
