--- a/.github/actions/deploy-cloud-run/action.yml
+++ b/.github/actions/deploy-cloud-run/action.yml
@@ -63,7 +63,7 @@ runs:
         done
 
     - name: Rollback
-      if: ${{ steps.health_check.outputs.error }}
+      if: ${{ steps.health_check.outputs.error && steps.get_revision.outputs.revision }}
       shell: bash
       run: |
         gcloud run services update-traffic "${{ inputs.service }}" \
