chore: set empty json as default custom_headers value

--- a/.github/workflows/validate-nginx-config.yml
+++ b/.github/workflows/validate-nginx-config.yml
@@ -3,7 +3,8 @@ on:
   workflow_call:
     inputs:
       custom_headers:
-        description: 'Custom headers to be passed to the Nginx configuration via environment variables.'
+        default: '{}'
+        description: 'Custom k/v in JSON format to be passed to the Nginx configuration via environment variables.'
         required: false
         type: string
       port:
