chore: add actions and update prepare-build workflow

--- a/.github/workflows/prepare-build.yml
+++ b/.github/workflows/prepare-build.yml
@@ -2,14 +2,13 @@ on:
   workflow_call:
     inputs:
       repo:
-        description: "Repository to build (e.g. owner/repo)"
-        required: true
+        description: Repository name (owner/repo) (prevents execution in different repositories)
         type: string
+        required: false
       release_branch:
         type: string
         description: Branch to use for release
         required: false
-        default: release
     outputs:
       sha_short:
         description: "Short SHA of the commit"
@@ -34,36 +33,7 @@ jobs:
       new_tag_short: ${{ steps.info.outputs.new_tag_short }}
       name: ${{ steps.info.outputs.name }}
     steps:
-      - name: checkout
-        uses: actions/checkout@v4
-      - name: Fetch tags
-        shell: bash
-        run: git fetch --prune --unshallow --tags
-      - name: Get info
-        shell: bash
+      - uses: ./actions/prepare-build
         id: info
-        # The tag name should be retrieved lazily, as tagging may be delayed.
-        env:
-          BRANCH: ${{ github.head_ref || github.ref_name }}
-          RELEASE_BRANCH: ${{ inputs.release_branch }}
-        run: |
-          echo "sha_short=$(git rev-parse --short HEAD))" >> "$GITHUB_OUTPUT"
-          if [[ "$BRANCH" = "$RELEASE_BRANCH" ]]; then
-            TAG=$(git tag --points-at HEAD)
-            if [[ ! -z "$TAG" ]]; then
-              echo "new_tag=$TAG" >> "$GITHUB_OUTPUT"
-              echo "new_tag_short=${TAG#v}" >> "$GITHUB_OUTPUT"
-            else
-              echo "name=rc" >> "$GITHUB_OUTPUT"
-            fi
-          else
-            echo "name=nightly" >> "$GITHUB_OUTPUT"
-          fi
-      - name: Show info
-        shell: bash
-        env:
-          SHA_SHORT: ${{ steps.info.outputs.sha_short }}
-          NEW_TAG: ${{ steps.info.outputs.new_tag }}
-          NEW_TAG_SHORT: ${{ steps.info.outputs.new_tag_short }}
-          NAME: ${{ steps.info.outputs.name }}
-        run: echo "sha_short=$SHA_SHORT, new_tag=$NEW_TAG, new_tag_short=$NEW_TAG_SHORT, name=$NAME"
+        with:
+          release_branch: ${{ inputs.release_branch }}
