--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -4,6 +4,8 @@ on:
       image:
         type: string
         required: true
+      context:
+        type: string
       use_dockerhub:
         description: Whether to push to DockerHub
         type: boolean
@@ -70,7 +72,7 @@ jobs:
       - name: Build and push docker image
         uses: docker/build-push-action@v6
         with:
-          context: ./web
+          context: ${{ inputs.context }}
           push: true
           build-args: |
             GITHUB_SHA=${{ inputs.sha_short }}
