chore: add checkout input to prepare-build action

--- a/.github/actions/prepare-build/action.yml
+++ b/.github/actions/prepare-build/action.yml
@@ -14,6 +14,10 @@ inputs:
     description: Branch to use for release
     required: false
     default: release
+  checkout:
+    description: Whether to checkout the repository
+    required: false
+    default: "true"
 outputs:
   build:
     description: Whether to build
@@ -35,6 +39,7 @@ runs:
   using: composite
   steps:
     - name: checkout
+      if: ${{ inputs.checkout == 'true' }}
       uses: actions/checkout@v4
     - name: Fetch tags
       shell: bash
