--- a/.github/workflows/go-dependency-check.yml
+++ b/.github/workflows/go-dependency-check.yml
@@ -24,7 +24,7 @@ jobs:
           cache-dependency-path: |
             ${{ inputs.subdirectory }}/go.sum
       - name: Install go-licenses
-        run: go install github.com/google/go-licenses@latest
+        run: go install github.com/google/go-licenses@v1.6.0
       - run: go mod download
       - name: Check for License Compliance
         run: |
