--- a/.github/workflows/validate-nginx-config.yml
+++ b/.github/workflows/validate-nginx-config.yml
@@ -20,7 +20,7 @@ on:
         default: 'web'
         description: Default working directory to run the job
         required: false
-        type: string  
+        type: string
 
 jobs:
   validate-nginx-config:
@@ -40,8 +40,8 @@ jobs:
         run: |
           # Check if template_values is set
           if [ -n "${{ inputs.template_values }}" ] && [ "${{ inputs.template_values }}" != "{}" ]; then
-            echo "Parsing custom headers: ${{ inputs.template_values }}"
-            
+            echo "Parsing custom template values: ${{ inputs.template_values }}"
+
             # Parse and export each key-value pair as an environment variable
             echo '${{ inputs.template_values }}' | jq -r 'to_entries | .[] | "\(.key)=\(.value)"' | while IFS="=" read -r key value; do
                 # Replace hyphens with underscores to make it a valid environment variable name
@@ -57,7 +57,7 @@ jobs:
         if: ${{ inputs.verbose }}
       - name: download Nginx envsubst script
         run: |
-          curl -s -O https://raw.githubusercontent.com/nginxinc/docker-nginx/2879b26c7dedf1d958b1894a5c1b1dec3c026369/entrypoint/20-envsubst-on-templates.sh 
+          curl -s -O https://raw.githubusercontent.com/nginxinc/docker-nginx/2879b26c7dedf1d958b1894a5c1b1dec3c026369/entrypoint/20-envsubst-on-templates.sh
           chmod +x 20-envsubst-on-templates.sh
       - name: envsubst Nginx config
         run: sudo --preserve-env ./20-envsubst-on-templates.sh
