--- a/license-checker/npm/action.yml
+++ b/license-checker/npm/action.yml
@@ -22,8 +22,10 @@ runs:
     - uses: actions/setup-node@v4
       with:
         node-version-file: ${{ inputs.subdirectory }}/package.json
-        cache: yarn
-        cache-dependency-path: ${{ inputs.subdirectory }}/yarn.lock
+    - name: Install yarn
+      shell: bash
+      run: |
+        corepack enable
     - name: Install license-checker
       shell: bash
       run: npm install -g license-checker-rseidelsohn
