--- a/license-checker/npm/action.yml
+++ b/license-checker/npm/action.yml
@@ -22,11 +22,13 @@ runs:
     - uses: actions/setup-node@v4
       with:
         node-version-file: ${{ inputs.subdirectory }}/package.json
-    - name: Install yarn
+    - name: Enable corepack
       shell: bash
-      run: |
-        corepack enable
-        yarn install
+      run: corepack enable
+    - name: Run yarn install
+      shell: bash
+      working-directory: ${{ inputs.subdirectory }}
+      run: yarn install
     - name: Install license-checker
       shell: bash
       run: npm install -g license-checker-rseidelsohn
